# telebot-maxapi-adapter

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-publish.yml
telebot_maxapi_adapter/: __init__.py  base_adapter.py  file_info.py  max_adapter.py
